--- a/GroupA_HM2.Rmd
+++ b/GroupA_HM2.Rmd
@@ -96,7 +96,7 @@ From the three density plots above it is possible to notice the effect of sample
 
 -   We are now considering the sampling distribution of $\bar{\text{Y}}$. So we now have some different random samples each with $n=100$ elements. The central limit theorem states that the distribution of the sample means, and in general of any sample statistics, will be approximately normal, no matter the shape of the population distribution. Clearly the samples for the applicability of the theorem it is required that the samples are all randomly taken from the population, that all the elements of each sample are independent and that the samples are large enough, and in our case $n=100$ satisfies this condition. Since we suppose the other two condition to be true, the sample means will be approximately bell shaped, with expected value $\mu_{\bar{\text{Y}}}=\mu=72$ years and standard deviation $\sigma_{\bar{\text{Y}}}=\sigma/\sqrt{n}=1.2$ years. It says us that picking different random samples and each time computing the mean we expect that on average the mean will be 72 years, also these means will be normal distributed.
 
--   It would not be strange to find a 60 years old person in Sunshine city. In fact the population distribution is left skewed, it means it has a long non-null "tail" on the left in which such an age, also considering the spread $\sigma=12$ years that express the variability from the centre value, seems not strange. Anyway for a random sample of $n$ finding a sample mean of 60 years would be really unusual for the reasons explained below. If the conditions of the CLT are all satisfied we expect a sample mean equal to the population mean and with a low variability $\sigma_{\bar{\text{Y}}}=1.2$ years.
+-   It would not be strange to find a 60 years old person in Sunshine city. In fact the population distribution is left skewed, it means it has a long non-null "tail" on the left in which such an age, also considering the spread $\sigma=12$ years that expresses the variability from the centre value, seems not strange. Anyway for a random sample of $n$ finding a sample mean of 60 years would be really unusual for the reasons explained below. If the conditions of the CLT are all satisfied we expect a sample mean equal to the population mean with a low variability $\sigma_{\bar{\text{Y}}}=1.2$ years.
 
 -   In the first case we select every time a single value from the population. The mean is its self value, so practically we are randomly picking values from the population, they will be distributed approximately as the population itself. In the second case sampling the entire population means that each time the sample will always have mean value equal to the population one, so 72 years. Hence the sample distribution of means will not be a distribution at all since it will only have the same repeated value.
 
@@ -654,7 +654,7 @@ We can therefore conclude that it's plausible that the true value of the paramet
 
 **Solution**
 
-a)    To compare the mean sales for the two menus with a significance test, given the assumption made by the problem we can use the either the standard t-test, with the pooled standard deviation. First of all we estimate a pooled value $s$ for the standard deviation: 
+a)    To compare the mean sales for the two menus with a significance test, given the assumption made by the problem we can use the standard t-test with the pooled standard deviation. First of all we estimate a pooled value $s$ for the standard deviation: 
 $$ s= \sqrt{\frac{(n_1-1)s_1^2+(n_2-1)s_2^2}{n_1+n_2-2}}$$
 This is possible since $s_1$ and $s_2$ do not result greatly different. So in this case the estimated standard error is:
 $$ se = s\sqrt{\frac{1}{n_1}+\frac{1}{n_2}}$$
